# TravelWiseAI-Amadeus-MCP

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
infrastructure/: README.md  ec2.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  user_data.sh  variables.tf
src/: run_sse.py  server.py
