[project]
name = "mcp-amadeus"
version = "0.1.0"
description = "Amadeus Travel API Server utilizing the Model Context Protocol (MCP) with secure SSE transport."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amadeus>=12.0.0",
    "mcp[cli]>=1.6.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0"
]